Allow regular user authenticate using JWT

--- a/api/tests/integration/auth/change_password.tavern.yml
+++ b/api/tests/integration/auth/change_password.tavern.yml
@@ -6,6 +6,7 @@ marks:
   - usefixtures:
     - api_live_url
     - token_user_can_change
+    - jwt_token_user_can_change
 
 stages:
   - name: Anonymous can not  change password
@@ -21,7 +22,15 @@ stages:
       headers:
         Authorization: 'Token {token_user_can_change}'
     response:
-      status_code: 401
+      status_code: 403
+  - name: Auth user can notchange password even with change permissions (JWT)
+    request:
+      url: "{api_live_url}/auth/password/change/"
+      method: "POST"
+      headers:
+        Authorization: 'Bearer {jwt_token_user_can_change}'
+    response:
+      status_code: 403
 
 ---
 
