--- a/api/tests/integration/identification_tasks/list.tavern.yml
+++ b/api/tests/integration/identification_tasks/list.tavern.yml
@@ -7,7 +7,7 @@ marks:
   - usefixtures:
     - api_live_url
     - app_user_token
-    - token_user
+    - jwt_token_user
 
 stages:
   - name: List method returns not exist for mobile users
@@ -23,13 +23,13 @@ stages:
       url: "{api_live_url}/{endpoint}/"
       method: "GET"
     response:
-      status_code: 403
+      status_code: 401
   - name: User without perm view can list
     request:
       url: "{api_live_url}/{endpoint}/"
       method: "GET"
       headers:
-        Authorization: "Token {token_user:s}"
+        Authorization: "Bearer {jwt_token_user:s}"
     response:
       status_code: 403
 
@@ -44,7 +44,7 @@ marks:
   - usefixtures:
     - api_live_url
     - identification_task
-    - token_user_can_view
+    - jwt_token_user_can_view
 
 stages:
   - name: User with perm view can retrieve
@@ -52,7 +52,7 @@ stages:
       url: "{api_live_url}/{endpoint}/"
       method: "GET"
       headers:
-        Authorization: "Token {token_user_can_view:s}"
+        Authorization: "Bearer {jwt_token_user_can_view:s}"
     response:
       status_code: 200
       json: !force_format_include "{response_list_data_validation}"
@@ -68,7 +68,7 @@ marks:
   - usefixtures:
     - api_live_url
     - archived_identification_task
-    - token_user_can_view
+    - jwt_token_user_can_view
 
 stages:
   - name: User with regular perm view can not retrieve archived identification tasks.
@@ -76,7 +76,7 @@ stages:
       url: "{api_live_url}/{endpoint}/"
       method: "GET"
       headers:
-        Authorization: "Token {token_user_can_view:s}"
+        Authorization: "Bearer {jwt_token_user_can_view:s}"
     response:
       status_code: 200
       strict:
@@ -95,8 +95,8 @@ marks:
   - usefixtures:
     - api_live_url
     - archived_identification_task
-    - token_user_can_view
-    - token_user_can_view_archived_identificationtasks
+    - jwt_token_user_can_view
+    - perm_user_can_view_archived_identificationtasks
 
 stages:
   - name: User with perm view arcjoved can retrieve archived identification tasks.
@@ -104,7 +104,7 @@ stages:
       url: "{api_live_url}/{endpoint}/"
       method: "GET"
       headers:
-        Authorization: "Token {token_user_can_view_archived_identificationtasks:s}"
+        Authorization: "Bearer {jwt_token_user_can_view:s}"
     response:
       status_code: 200
       strict:
