--- a/api/tests/integration/taxa/get.tavern.yml
+++ b/api/tests/integration/taxa/get.tavern.yml
@@ -10,7 +10,7 @@ marks:
     - api_live_url
     - app_user_token
     - taxon_root
-    - token_user
+    - jwt_token_user
 
 stages:
   - name: Retrieve is allowed for mobile users
@@ -33,7 +33,7 @@ stages:
       url: "{api_live_url}/{endpoint}/{taxon_root.pk}/"
       method: "GET"
       headers:
-        Authorization: "Token {token_user:s}"
+        Authorization: "Bearer {jwt_token_user:s}"
     response:
       status_code: 200
       json: !force_format_include "{response_data_validation}"
