--- a/api/tests/integration/users/get.tavern.yml
+++ b/api/tests/integration/users/get.tavern.yml
@@ -9,7 +9,7 @@ marks:
   - usefixtures:
     - api_live_url
     - app_user
-    - token_user
+    - jwt_token_user
 
 stages:
   - name: Anonymous user can not get user
@@ -23,7 +23,7 @@ stages:
       url: "{api_live_url}/{endpoint}/{app_user.pk}/"
       method: GET
       headers:
-        Authorization: 'Token {token_user}'
+        Authorization: 'Bearer {jwt_token_user}'
     response:
       status_code: 403
 
@@ -38,7 +38,7 @@ marks:
   - usefixtures:
     - api_live_url
     - app_user
-    - token_user_can_view
+    - jwt_token_user_can_view
 
 stages:
   - name: Authorized user without permission can not get user
@@ -46,7 +46,7 @@ stages:
       url: "{api_live_url}/{endpoint}/{app_user.pk}/"
       method: GET
       headers:
-        Authorization: 'Token {token_user_can_view}'
+        Authorization: 'Bearer {jwt_token_user_can_view}'
     response:
       status_code: 200
 
@@ -62,7 +62,7 @@ marks:
     - api_live_url
     - app_user
     - app_user_token
-    - token_user
+    - jwt_token_user
 
 stages:
   - name: Get user by authorized user
