--- a/api/tests/integration/countries/get.tavern.yml
+++ b/api/tests/integration/countries/get.tavern.yml
@@ -7,7 +7,7 @@ marks:
   - usefixtures:
     - api_live_url
     - app_user_token
-    - token_user
+    - jwt_token_user
     - country
 
 stages:
@@ -31,7 +31,7 @@ stages:
       url: "{api_live_url}/{endpoint}/{country.pk}/"
       method: "GET"
       headers:
-        Authorization: "Token {token_user:s}"
+        Authorization: "Bearer {jwt_token_user:s}"
     response:
       status_code: 200
       json: !force_format_include "{response_data_validation}"
