--- a/api/tests/integration/devices/update.tavern.yml
+++ b/api/tests/integration/devices/update.tavern.yml
@@ -7,7 +7,7 @@ marks:
   - usefixtures:
     - api_live_url
     - device
-    - token_user_can_change
+    - jwt_token_user_can_change
     - app_user
     - app_user_token
   - parametrize:
@@ -28,9 +28,9 @@ stages:
       url: "{api_live_url}/{endpoint}/{device.device_id}/"
       method: "{method}"
       headers:
-        Authorization: "Token {token_user_can_change}"
+        Authorization: "Bearer {jwt_token_user_can_change}"
     response:
-      status_code: 401
+      status_code: 403
   - name: Mobile app user can update owned device
     request:
       url: "{api_live_url}/{endpoint}/{device.device_id}/"
