--- a/api/tests/integration/identification_tasks/create.tavern.yml
+++ b/api/tests/integration/identification_tasks/create.tavern.yml
@@ -9,7 +9,7 @@ marks:
   - usefixtures:
     - api_live_url
     - app_user_token
-    - token_user_can_add
+    - jwt_token_user_can_add
 
 stages:
   - name: Create method not exist for mobile users
@@ -25,12 +25,12 @@ stages:
       url: "{api_live_url}/{endpoint}/"
       method: "POST"
     response:
-      status_code: 403
+      status_code: 401
   - name: Create method users even with permissions
     request:
       url: "{api_live_url}/{endpoint}/"
       headers:
-        Authorization: "Token {token_user_can_add}"
+        Authorization: "Bearer {jwt_token_user_can_add}"
       method: "POST"
     response:
       status_code: 405
