--- a/api/tests/integration/identification_tasks/delete.tavern.yml
+++ b/api/tests/integration/identification_tasks/delete.tavern.yml
@@ -8,7 +8,7 @@ marks:
     - api_live_url
     - app_user_token
     - identification_task
-    - token_user_can_delete
+    - jwt_token_user_can_delete
 
 stages:
   - name: Delete is disabeld for mobile users
@@ -24,12 +24,12 @@ stages:
       url: "{api_live_url}/{endpoint}/{identification_task.report.pk}/"
       method: "DELETE"
     response:
-      status_code: 403
+      status_code: 401
   - name: Delete method authenticated even users with permissions
     request:
       url: "{api_live_url}/{endpoint}/{identification_task.report.pk}/"
       headers:
-        Authorization: "Token {token_user_can_delete}"
+        Authorization: "Bearer {jwt_token_user_can_delete}"
       method: "DELETE"
     response:
       status_code: 405
