--- a/api/tests/integration/identification_tasks/photos/create.tavern.yml
+++ b/api/tests/integration/identification_tasks/photos/create.tavern.yml
@@ -9,7 +9,7 @@ marks:
   - usefixtures:
     - api_live_url
     - endpoint
-    - token_user
+    - jwt_token_user
     - app_user_token
 
 stages:
@@ -26,12 +26,12 @@ stages:
       url: "{api_live_url}/{endpoint}/"
       method: "POST"
     response:
-      status_code: 403
+      status_code: 401
   - name: Create method authenticated users without permissions
     request:
       url: "{api_live_url}/{endpoint}/"
       headers:
-        Authorization: "Token {token_user}"
+        Authorization: "Bearer {jwt_token_user}"
       method: "POST"
     response:
       status_code: 403
