--- a/api/tests/integration/identification_tasks/photos/list.tavern.yml
+++ b/api/tests/integration/identification_tasks/photos/list.tavern.yml
@@ -8,7 +8,7 @@ marks:
     - api_live_url
     - endpoint
     - identification_task
-    - token_user
+    - jwt_token_user
     - app_user_token
 
 stages:
@@ -25,13 +25,13 @@ stages:
       url: "{api_live_url}/{endpoint}/"
       method: "GET"
     response:
-      status_code: 403
+      status_code: 401
   - name: User without perm view can retrieve
     request:
       url: "{api_live_url}/{endpoint}/"
       method: "GET"
       headers:
-        Authorization: "Token {token_user:s}"
+        Authorization: "Bearer {jwt_token_user:s}"
     response:
       status_code: 200
       json: !force_format_include "{response_list_data_validation}"
@@ -49,7 +49,7 @@ marks:
     - endpoint
     - identification_task
     - extra_photo
-    - token_user
+    - jwt_token_user
 
 stages:
   - name: All photos are listed
@@ -57,7 +57,7 @@ stages:
       url: "{api_live_url}/{endpoint}/"
       method: "GET"
       headers:
-        Authorization: "Token {token_user:s}"
+        Authorization: "Bearer {jwt_token_user:s}"
     response:
       status_code: 200
       strict:
