--- a/api/tests/integration/notifications/create.tavern.yml
+++ b/api/tests/integration/notifications/create.tavern.yml
@@ -9,7 +9,7 @@ marks:
   - usefixtures:
     - api_live_url
     - app_user_token
-    - token_user
+    - jwt_token_user
   - parametrize:
       key:
         - receiver_type
@@ -30,7 +30,7 @@ stages:
       url: "{api_live_url}/{endpoint}/"
       method: "POST"
       headers:
-        Authorization: "Token {token_user}"
+        Authorization: "Bearer {jwt_token_user}"
     response:
       status_code: 403
   - name: Mobile app users can not create
@@ -53,7 +53,7 @@ marks:
   - usefixtures:
     - api_live_url
     - app_user
-    - token_user_can_add
+    - jwt_token_user_can_add
 
 stages:
   - name: Create user notification using auth user with permissions
@@ -69,7 +69,7 @@ stages:
           body:
             en: "english body"
       headers:
-        Authorization: "Token {token_user_can_add:s}"
+        Authorization: "Bearer {jwt_token_user_can_add:s}"
       method: "POST"
     response:
       status_code: 201
@@ -88,7 +88,7 @@ marks:
   - usefixtures:
     - api_live_url
     - app_user
-    - token_user_can_add
+    - jwt_token_user_can_add
     - topic
 
 stages:
@@ -105,7 +105,7 @@ stages:
           body:
             en: "english body"
       headers:
-        Authorization: "Token {token_user_can_add:s}"
+        Authorization: "Bearer {jwt_token_user_can_add:s}"
       method: "POST"
     response:
       status_code: 201
@@ -125,7 +125,7 @@ marks:
     - api_live_url
     - italian_user
     - app_user_token
-    - token_user_can_add
+    - jwt_token_user_can_add
 
 stages:
   - name: Create user notification
@@ -143,7 +143,7 @@ stages:
             en: "english body"
             it: "italian body"
       headers:
-        Authorization: "Token {token_user_can_add}"
+        Authorization: "Bearer {jwt_token_user_can_add}"
       method: "POST"
     response:
       status_code: 201
