--- a/api/tests/integration/observations/delete.tavern.yml
+++ b/api/tests/integration/observations/delete.tavern.yml
@@ -10,7 +10,7 @@ marks:
   - usefixtures:
     - api_live_url
     - object
-    - token_user
+    - jwt_token_user
     - app_user_token
 
 stages:
