--- a/api/tests/integration/photos/update.tavern.yml
+++ b/api/tests/integration/photos/update.tavern.yml
@@ -7,7 +7,7 @@ marks:
   - usefixtures:
     - api_live_url
     - report_photo
-    - token_user_can_change
+    - jwt_token_user_can_change
   - parametrize:
       key: method
       vals:
@@ -32,12 +32,12 @@ stages:
       url: "{api_live_url}/{endpoint}/{report_photo.uuid}/"
       method: "{method}"
     response:
-      status_code: 403
+      status_code: 401
   - name: Update is disabeld users even with permissions
     request:
       url: "{api_live_url}/{endpoint}/{report_photo.uuid}/"
       headers:
-        Authorization: "Token {token_user_can_change}"
+        Authorization: "Bearer {jwt_token_user_can_change}"
       method: "{method}"
     response:
       status_code: 405
