--- a/api/tests/integration/shared/reports/get_my.yml
+++ b/api/tests/integration/shared/reports/get_my.yml
@@ -16,6 +16,6 @@ stages:
       url: "{api_live_url}/me/{endpoint}/"
       method: GET
       headers:
-        Authorization: 'Token {token_user_can_view}'
+        Authorization: 'Bearer {jwt_token_user_can_view}'
     response:
-      status_code: 401
+      status_code: 403
