--- a/api/tests/integration/taxa/create.tavern.yml
+++ b/api/tests/integration/taxa/create.tavern.yml
@@ -9,7 +9,7 @@ marks:
   - usefixtures:
     - app_user_token
     - api_live_url
-    - token_user_can_add
+    - jwt_token_user_can_add
 
 stages:
   - name: Create method not exist for mobile users
@@ -30,7 +30,7 @@ stages:
     request:
       url: "{api_live_url}/{endpoint}/"
       headers:
-        Authorization: "Token {token_user_can_add}"
+        Authorization: "Bearer {jwt_token_user_can_add}"
       method: "POST"
     response:
       status_code: 405
